Tue Aug 26 06:32:05 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/StringKey/pub.ini:
        * tests/DCPS/StringKey/sub.ini:

          Added missing files.
          
Mon Aug 25 17:53:30 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/StringKey/DataReaderListener.h:
        * tests/DCPS/StringKey/DataReaderListener.cpp:
        * tests/DCPS/StringKey/Messenger.idl:
        * tests/DCPS/StringKey/StringKey.mpc:
        * tests/DCPS/StringKey/Writer.h:
        * tests/DCPS/StringKey/Writer.cpp:
        * tests/DCPS/StringKey/domain_ids:
        * tests/DCPS/StringKey/publisher.cpp:
        * tests/DCPS/StringKey/run_test.pl:
        * tests/DCPS/StringKey/subscriber.cpp:
        * tests/DCPS/StringKey/tcp.conf:

          Added new test to detect incorrect String_Manager comparison
          that cause multiple instances created for same string key.

        * bin/dcps_tests.lst:

          Added StringKey test.

Thu Jul 31 16:23:14 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketSender.cpp:

          In the open() method, return false on error instead of -1 (true).

Thu Jul 24 23:12:45 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/pub_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/pub_reliable_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/sub_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/sub_reliable_mcast.ini:
        * performance-tests/DCPS/InfoRepo_population/pub_mcast.ini:
        * performance-tests/DCPS/InfoRepo_population/sub_mcast.ini:

          Added fixed port to multicast_group_address which is required.

        * dds/DCPS/transport/simpleUnreliableDgram/SimpleMcastTransport.cpp:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUdpTransport.cpp:

          Updated local_address_str with port picked by OS when local_address
          is configured with "localhost:" (or "localhost:0"). This bug makes